--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,11 @@
-version: 2
+version: 2.1
+orbs:
+  node: circleci/node@3.0.0
 jobs:
-  test:
-    parameter: 
-      app-dir:
-        default: ~/xt-app
-  build:
-    docker:
-      - image: 'circleci/node:8'
-    working_directory: ~/xt-app
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - 'v1-dependencies-{{ checksum "package.json" }}'
-            - v1-dependencies-
-      - run: 'yarn install'
-      - save_cache:
-          paths:
-            - node_modules
-          key: 'v1-dependencies-{{ checksum "package.json" }}'
-      - run: 'yarn test'
-      - run:
-          name: 'Build Project'
-          command: 'yarn build'
-      - run:
-          name: 'Deploy to Firebase Hosting'
-          command: './node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN'
+  parameter:
+    app-dir:
+      default: ~/ps-xt-coding/xt-app
+workflows:
+  node-tests:
+    jobs:
+      - node/test
