--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,26 @@
-version: 2.1
-orbs:
-  node: circleci/node@3.0.0
+version: 2
 jobs:
-  parameter:
-    app-dir:
-      default: ~/ps-xt-coding/xt-app
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+    build:
+        docker:
+            - image: circleci/node:10.16.0
+        working_directory: ~/repo
+        steps:
+            - checkout
+            # Download and cache dependencies
+            - restore_cache:
+                  keys:
+                      - v1-dependencies-{{ checksum "/xt-app/package.json" }}
+                      - v1-dependencies-
+            - run:
+                  name: Install Dependencies
+                  command: npm install
+            - save_cache:
+                  key: v1-npm-deps-{{ checksum "/xt-app/package-lock.json" }}
+                  paths:
+                      - ./node_modules
+            - run:
+                  name: Build
+                  command: npm build
+            - run:
+                  name: Firebase Deploy
+                  command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
