--- a/xt-app/package.json
+++ b/xt-app/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.23.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
