--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
     build:
         docker:
             - image: circleci/node:10.16.0
-        working_directory: ~/repo/xt-app/src
+        working_directory: ~/repo
         steps:
             - checkout
             # Download and cache dependencies
@@ -23,5 +23,4 @@ jobs:
                   command: npm build
             - run:
                   name: Firebase Deploy
-                  command: cd xt-app
                   command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
