--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "xt-app/build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -10,16 +10,7 @@
       {
         "source": "**",
         "destination": "/index.html"
-      },
-      {
-        "source": "/all",
-        "functions": "all"
       }
-    ]
-  },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
     ]
   }
 }
