--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
     build:
         docker:
             - image: circleci/node:10.16.0
-        working_directory: /xt-app
+        working_directory: ~/repo
         steps:
             - checkout
             # Download and cache dependencies
